Fixed some spacing on headers in two-column

--- a/css/taskcode.css
+++ b/css/taskcode.css
@@ -232,6 +232,12 @@ a.pure-button-primary {
     margin: 2em 0 1em;
 }
 
+.column-head {
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+}
+
 /* This is a modifier class used when the content-head is inside a ribbon */
 .content-head-ribbon {
     color: white;
